--- a/stack/ansible/keights-system/templates/manifests/kubernetes-dashboard.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/kubernetes-dashboard.yml.j2
@@ -24,7 +24,6 @@ kind: Secret
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
-    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard-certs
   namespace: kube-system
 type: Opaque
@@ -37,7 +36,6 @@ kind: ServiceAccount
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
-    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kube-system
 
@@ -47,8 +45,6 @@ metadata:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  labels:
-    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard-minimal
   namespace: kube-system
 rules:
@@ -84,8 +80,6 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  labels:
-    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard-minimal
   namespace: kube-system
 roleRef:
@@ -105,7 +99,6 @@ apiVersion: apps/v1beta2
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
-    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
@@ -121,7 +114,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.0
+        image: {{ keights_system.kubernetes_dashboard_image | default('k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.0') }}
         ports:
         - containerPort: 8443
           protocol: TCP
@@ -164,7 +157,6 @@ apiVersion: v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
-    addonmanager.kubernetes.io/mode: Reconcile
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
