--- a/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
@@ -39,17 +39,25 @@ spec:
       serviceAccountName: kube-router
       containers:
       - name: kube-router
-        image: {{ keights_system.network.kube_router_image | default('cloudnativelabs/kube-router:v0.2.3') }}
+        image: {{ keights_system.network.kube_router_image | default('cloudnativelabs/kube-router:v0.2.5') }}
+        imagePullPolicy: IfNotPresent
         args:
-        - "--run-router=true"
-        - "--run-firewall=true"
-        - "--run-service-proxy=false"
-        - "--disable-source-dest-check=false"
+        - --run-router=true
+        - --run-firewall=true
+        - --run-service-proxy=false
+        - --disable-source-dest-check=false
+        - --bgp-graceful-restart
         env:
         - name: NODE_NAME
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 20244
+          initialDelaySeconds: 10
+          periodSeconds: 3
         resources:
           requests:
             cpu: 250m
@@ -64,7 +72,8 @@ spec:
           mountPath: /etc/cni/net.d
       initContainers:
       - name: install-cni
-        image: {{ keights_system.network.busybox_image | default('busybox:1.28.1') }}
+        image: {{ keights_system.network.busybox_image | default('busybox:1.30.1') }}
+        imagePullPolicy: IfNotPresent
         command:
         - /bin/sh
         - -c
