--- a/stack/ansible/keights-system/templates/manifests/calico.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/calico.yml.j2
@@ -906,7 +906,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
-    verbs: ["list"]
+    verbs: ["list", "watch"]
 
 ---
 
@@ -956,7 +956,7 @@ spec:
       nodeSelector:
         beta.kubernetes.io/os: linux
       containers:
-        - image: {{ keights_system.network.typha_autoscaler_image | default('k8s.gcr.io/cluster-proportional-autoscaler-amd64:1.1.2') }}
+        - image: {{ keights_system.network.typha_autoscaler_image | default('k8s.gcr.io/cluster-proportional-autoscaler-amd64:1.7.1') }}
           name: autoscaler
           command:
             - /cluster-proportional-autoscaler
@@ -983,7 +983,7 @@ rules:
   - apiGroups: [""]
     resources: ["configmaps"]
     verbs: ["get"]
-  - apiGroups: ["extensions"]
+  - apiGroups: ["apps", "extensions"]
     resources: ["deployments/scale"]
     verbs: ["get", "update"]
 
