--- a/stack/ansible/keights-system/templates/manifests/calico.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/calico.yml.j2
@@ -1,6 +1,6 @@
 #jinja2: trim_blocks:False
-# Calico Version v3.10.2
-# https://docs.projectcalico.org/v3.10/introduction
+# Calico Version v3.14.1
+# https://docs.projectcalico.org/v3.14/introduction
 ---
 
 # Include a clusterrole for the calico-node DaemonSet,
@@ -27,6 +27,12 @@ rules:
       - watch
       - list
       # Used to discover Typhas.
+      - get
+  # Pod CIDR auto-detection on kubeadm needs access to config maps.
+  - apiGroups: [""]
+    resources:
+      - configmaps
+    verbs:
       - get
   - apiGroups: [""]
     resources:
@@ -167,6 +173,16 @@ rules:
       - create
       - update
       - delete
+  # kube-controllers manages hostendpoints.
+  - apiGroups: ["crd.projectcalico.org"]
+    resources:
+      - hostendpoints
+    verbs:
+      - get
+      - list
+      - create
+      - update
+      - delete
   # Needs access to update clusterinformations.
   - apiGroups: ["crd.projectcalico.org"]
     resources:
@@ -175,6 +191,19 @@ rules:
       - get
       - create
       - update
+  # KubeControllersConfiguration is where it gets its config
+  - apiGroups: ["crd.projectcalico.org"]
+    resources:
+      - kubecontrollersconfigurations
+    verbs:
+      # read its own config
+      - get
+      # create a default if none exists
+      - create
+      # update status
+      - update
+      # watch for changes
+      - watch
 
 ---
 
@@ -219,7 +248,9 @@ data:
   # Configure the backend to use.
   calico_backend: "bird"
 
-  # Configure the MTU to use
+  # Configure the MTU to use for workload interfaces and the
+  # tunnels.  For IPIP, set to your network MTU - 20; for VXLAN
+  # set to your network MTU - 50.
   veth_mtu: "1440"
 
   # The CNI network configuration to install on each node.  The special
@@ -249,6 +280,10 @@ data:
           "type": "portmap",
           "snat": true,
           "capabilities": {"portMappings": true}
+        },
+        {
+          "type": "bandwidth",
+          "capabilities": {"bandwidth": true}
         }
       ]
     }
@@ -311,7 +346,7 @@ spec:
       securityContext:
         fsGroup: 65534
       containers:
-      - image: {{ keights_system.network.typha_image | default('calico/typha:v3.10.2') }}
+      - image: {{ keights_system.network.typha_image | default('calico/typha:v3.14.1') }}
         name: calico-typha
         ports:
         - containerPort: 5473
@@ -393,7 +428,7 @@ spec:
         k8s-app: calico-node
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       hostNetwork: true
       tolerations:
         # Make sure calico-node gets scheduled on all nodes.
@@ -414,7 +449,7 @@ spec:
         # This container adds a route reflector cluster ID to
         # a node if one of its labels matches `RR_NODE_LABEL`.
         - name: update-node
-          image: {{ keights_system.network.calico_ctl_image | default('calico/ctl:v3.10.2') }}
+          image: {{ keights_system.network.calico_ctl_image | default('calico/ctl:v3.14.1') }}
           env:
             - name: DATASTORE_TYPE
               value: kubernetes
@@ -444,7 +479,7 @@ spec:
         # It can be deleted if this is a fresh installation, or if you have already
         # upgraded to use calico-ipam.
         - name: upgrade-ipam
-          image: {{ keights_system.network.cni_image | default('calico/cni:v3.10.2') }}
+          image: {{ keights_system.network.cni_image | default('calico/cni:v3.14.1') }}
           command: ["/opt/cni/bin/calico-ipam", "-upgrade"]
           env:
             - name: KUBERNETES_NODE_NAME
@@ -461,10 +496,12 @@ spec:
               name: host-local-net-dir
             - mountPath: /host/opt/cni/bin
               name: cni-bin-dir
+          securityContext:
+            privileged: true
         # This container installs the CNI binaries
         # and CNI network config file on each node.
         - name: install-cni
-          image: {{ keights_system.network.cni_image | default('calico/cni:v3.10.2') }}
+          image: {{ keights_system.network.cni_image | default('calico/cni:v3.14.1') }}
           command: ["/install-cni.sh"]
           env:
             # Name of the CNI config file to create.
@@ -495,19 +532,23 @@ spec:
               name: cni-bin-dir
             - mountPath: /host/etc/cni/net.d
               name: cni-net-dir
+          securityContext:
+            privileged: true
         # Adds a Flex Volume Driver that creates a per-pod Unix Domain Socket to allow Dikastes
         # to communicate with Felix over the Policy Sync API.
         - name: flexvol-driver
-          image: {{ keights_system.network.pod2daemon_flexvol_image | default('calico/pod2daemon-flexvol:v3.10.2') }}
+          image: {{ keights_system.network.pod2daemon_flexvol_image | default('calico/pod2daemon-flexvol:v3.14.1') }}
           volumeMounts:
           - name: flexvol-driver-host
             mountPath: /host/driver
+          securityContext:
+            privileged: true
       containers:
         # Runs calico-node container on each Kubernetes node.  This
         # container programs network policy and routes on each
         # host.
         - name: calico-node
-          image: {{ keights_system.network.calico_node_image | default('calico/node:v3.10.2') }}
+          image: {{ keights_system.network.calico_node_image | default('calico/node:v3.14.1') }}
           env:
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
@@ -541,8 +582,17 @@ spec:
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
               value: "CrossSubnet"
+            # Enable or Disable VXLAN on the default IP pool.
+            - name: CALICO_IPV4POOL_VXLAN
+              value: "Never"
             # Set MTU for tunnel device used if ipip is enabled
             - name: FELIX_IPINIPMTU
+              valueFrom:
+                configMapKeyRef:
+                  name: calico-config
+                  key: veth_mtu
+            # Set MTU for the VXLAN tunnel device.
+            - name: FELIX_VXLANMTU
               valueFrom:
                 configMapKeyRef:
                   name: calico-config
@@ -708,7 +758,7 @@ spec:
         k8s-app: calico-kube-controllers
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
+        kubernetes.io/os: linux
       tolerations:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
@@ -719,7 +769,7 @@ spec:
       priorityClassName: system-cluster-critical
       containers:
         - name: calico-kube-controllers
-          image: {{ keights_system.network.kube_controllers_image | default('calico/kube-controllers:v3.10.2') }}
+          image: {{ keights_system.network.kube_controllers_image | default('calico/kube-controllers:v3.14.1') }}
           env:
             # Choose which controllers to run.
             - name: ENABLED_CONTROLLERS
