--- a/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
@@ -10,14 +10,25 @@ metadata:
 data:
   cni-conf.json: |
     {
-      "cniVersion":"0.3.1",
-      "name":"kubernetes",
-      "type":"bridge",
-      "bridge":"kube-bridge",
-      "isDefaultGateway":true,
-      "ipam": {
-        "type":"host-local"
-      }
+      "cniVersion": "0.3.1",
+      "name": "kubernetes",
+      "plugins": [
+        {
+          "type": "bridge",
+          "bridge": "kube-bridge",
+          "isDefaultGateway": true,
+          "ipam": {
+            "type": "host-local"
+          }
+        },
+        {
+          "type": "portmap",
+          "capabilities": {
+            "snat": true,
+            "portMappings": true
+          }
+        }
+      ]
     }
 
 ---
@@ -44,20 +55,22 @@ spec:
       serviceAccountName: kube-router
       containers:
       - name: kube-router
-        image: {{ keights_system.network.kube_router_image | default('cloudnativelabs/kube-router:v0.3.2') }}
+        image: {{ keights_system.network.kube_router_image | default('cloudnativelabs/kube-router:v1.0.1') }}
         imagePullPolicy: IfNotPresent
         args:
         - --run-router=true
         - --run-firewall=true
         - --run-service-proxy={{ keights_system.network.replace_kube_proxy | default(false) | to_json }}
         - --disable-source-dest-check=false
-        - --bgp-graceful-restart
+        - --bgp-graceful-restart=true
         - --kubeconfig=/kube-router/kubeconfig
         env:
         - name: NODE_NAME
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
+        - name: KUBE_ROUTER_CNI_CONF_FILE
+          value: /etc/cni/net.d/10-kuberouter.conflist
         livenessProbe:
           httpGet:
             path: /healthz
@@ -76,6 +89,9 @@ spec:
           readOnly: true
         - name: cni-conf-dir
           mountPath: /etc/cni/net.d
+        - name: xtables-lock
+          mountPath: /run/xtables.lock
+          readOnly: false
         - name: kube-router
           mountPath: /kube-router
       initContainers:
@@ -155,15 +171,21 @@ spec:
         - /bin/sh
         - -xec
         - |
-          dest=/etc/cni/net.d/10-kuberouter.conf
+          for oldconf in /etc/cni/net.d/*.conf; do
+              rm -f ${oldconf}
+          done
+          configmap=/etc/kube-router/cni-conf.json
+          dest=/etc/cni/net.d/10-kuberouter.conflist
           tmp=.${dest}
-          cp /etc/kube-router/cni-conf.json ${tmp}
-          mv ${tmp} ${dest}
+          diff ${configmap} ${dest} >/dev/null 2>&1 || (
+              cp ${configmap} ${tmp}
+              mv ${tmp} ${dest}
+          )
         volumeMounts:
-        - mountPath: /etc/cni/net.d
-          name: cni-conf-dir
-        - mountPath: /etc/kube-router
-          name: kube-router-cfg
+        - name: cni-conf-dir
+          mountPath: /etc/cni/net.d
+        - name: kube-router-cfg
+          mountPath: /etc/kube-router
       hostNetwork: true
       tolerations:
       - key: CriticalAddonsOnly
@@ -190,6 +212,10 @@ spec:
       - name: kube-router
         emptyDir:
           medium: Memory
+      - name: xtables-lock
+        hostPath:
+          path: /run/xtables.lock
+          type: FileOrCreate
   updateStrategy:
     type: RollingUpdate
 
