Update kube-router to v1.2.1

--- a/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
@@ -55,7 +55,7 @@ spec:
       serviceAccountName: kube-router
       containers:
       - name: kube-router
-        image: {{ keights_system.network.kube_router_image | default('cloudnativelabs/kube-router:v1.0.1') }}
+        image: {{ keights_system.network.kube_router_image | default('cloudnativelabs/kube-router:v1.2.1') }}
         imagePullPolicy: IfNotPresent
         args:
         - --run-router=true
@@ -134,7 +134,7 @@ spec:
       {% if keights_system.network.rr_node_label | default('') %}
       # Label a node so you can annotate a node...
       - name: annotate-node
-        image: {{ keights_system.network.kubectl_image | default('bitnami/kubectl:1.18.8') }}
+        image: {{ keights_system.network.kubectl_image | default('bitnami/kubectl:1.20.5') }}
         imagePullPolicy: IfNotPresent
         env:
         - name: KUBECONFIG
@@ -188,13 +188,11 @@ spec:
           mountPath: /etc/kube-router
       hostNetwork: true
       tolerations:
+      - effect: NoSchedule
+        operator: Exists
       - key: CriticalAddonsOnly
         operator: Exists
-      - effect: NoSchedule
-        key: node-role.kubernetes.io/master
-        operator: Exists
-      - effect: NoSchedule
-        key: node.kubernetes.io/not-ready
+      - effect: NoExecute
         operator: Exists
       volumes:
       - name: lib-modules
@@ -228,7 +226,7 @@ metadata:
 
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: kube-router
   namespace: kube-system
@@ -270,7 +268,7 @@ rules:
 
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: kube-router
 roleRef:
