--- a/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
@@ -8,6 +8,25 @@ metadata:
     tier: node
     k8s-app: kube-router
 data:
+  kubeconfig.template: |
+    apiVersion: v1
+    kind: Config
+    clusters:
+    - cluster:
+        certificate-authority: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+        server: __APISERVER__
+      name: default
+    contexts:
+    - context:
+        cluster: default
+        namespace: default
+        user: default
+      name: default
+    current-context: default
+    users:
+    - name: default
+      user:
+        tokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
   cni-conf.json: |
     {
       "cniVersion": "0.3.1",
@@ -63,6 +82,7 @@ spec:
         - --run-service-proxy={{ keights_system.network.replace_kube_proxy | default(false) | to_json }}
         - --disable-source-dest-check=false
         - --bgp-graceful-restart=true
+        - --kubeconfig=/kube-router/kubeconfig
         env:
         - name: NODE_NAME
           valueFrom:
@@ -94,43 +114,24 @@ spec:
         - name: kube-router
           mountPath: /kube-router
       initContainers:
-      {% if keights_system.network.rr_node_label | default('') %}
       - name: write-kubeconfig
         image: {{ keights_system.network.busybox_image | default('busybox:1.30.1') }}
         command:
         - /bin/sh
         - -xec
         - |
-          # Borrow the kubelet's kubeconfig to get the apiserver's public DNS,
-          # to be able to connect before the internal network is up.
-          # See https://github.com/cloudnativelabs/kube-router/issues/859.
-          apiserver=`awk '/ server: https:/{print $2}' /etc/kubernetes/kubelet.conf`
-          cat > /kube-router/kubeconfig <<EOF
-          apiVersion: v1
-          kind: Config
-          clusters:
-          - cluster:
-              certificate-authority: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-              server: ${apiserver}
-            name: default
-          contexts:
-          - context:
-              cluster: default
-              namespace: default
-              user: default
-            name: default
-          current-context: default
-          users:
-          - name: default
-            user:
-              tokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-          EOF
+          apiserver=`cat /etc/kubernetes/apiserver`
+          template=/etc/kube-router/kubeconfig.template
+          sed "s|__APISERVER__|https://${apiserver}|g" ${template} > /kube-router/kubeconfig
         volumeMounts:
-        - name: kubelet-conf
-          mountPath: /etc/kubernetes/kubelet.conf
+        - name: apiserver
+          mountPath: /etc/kubernetes/apiserver
           readOnly: true
         - name: kube-router
           mountPath: /kube-router
+        - name: kube-router-cfg
+          mountPath: /etc/kube-router
+      {% if keights_system.network.rr_node_label | default('') %}
       # Label a node so you can annotate a node...
       - name: annotate-node
         image: {{ keights_system.network.kubectl_image | default('bitnami/kubectl:1.20.5') }}
@@ -203,9 +204,9 @@ spec:
       - name: kube-router-cfg
         configMap:
           name: kube-router-cfg
-      - name: kubelet-conf
+      - name: apiserver
         hostPath:
-          path: /etc/kubernetes/kubelet.conf
+          path: /etc/kubernetes/apiserver
       - name: kube-router
         emptyDir:
           medium: Memory
