Clean up kube-router init container
This is a small change to put the `.` character of the temporary file
in the file name and not before the full path.

--- a/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/kube-router.yml.j2
@@ -175,11 +175,12 @@ spec:
               rm -f ${oldconf}
           done
           configmap=/etc/kube-router/cni-conf.json
-          dest=/etc/cni/net.d/10-kuberouter.conflist
-          tmp=.${dest}
-          diff ${configmap} ${dest} >/dev/null 2>&1 || (
-              cp ${configmap} ${tmp}
-              mv ${tmp} ${dest}
+          netdir=/etc/cni/net.d
+          conflist=10-kuberouter.conflist
+          tmp=.${conflist}
+          diff ${configmap} ${netdir}/${conflist} >/dev/null 2>&1 || (
+              cp ${configmap} ${netdir}/${tmp}
+              mv ${netdir}/${tmp} ${netdir}/${conflist}
           )
         volumeMounts:
         - name: cni-conf-dir
