--- a/stack/ansible/keights-system/templates/manifests/aws-ebs-csi-driver.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/aws-ebs-csi-driver.yml.j2
@@ -423,7 +423,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        image: {{ keights_system.csi_driver.aws_ebs_csi_driver_image | default('k8s.gcr.io/provider-aws/aws-ebs-csi-driver:v1.4.0') }}
+        image: {{ keights_system.csi_driver.aws_ebs_csi_driver_image | default('registry.k8s.io/provider-aws/aws-ebs-csi-driver:v1.4.0') }}
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 5
@@ -459,7 +459,7 @@ spec:
         env:
         - name: ADDRESS
           value: /var/lib/csi/sockets/pluginproxy/csi.sock
-        image: {{ keights_system.csi_driver.csi_provisioner_image | default('k8s.gcr.io/sig-storage/csi-provisioner:v2.1.1') }}
+        image: {{ keights_system.csi_driver.csi_provisioner_image | default('registry.k8s.io/sig-storage/csi-provisioner:v2.1.1') }}
         imagePullPolicy: IfNotPresent
         name: csi-provisioner
         volumeMounts:
@@ -472,7 +472,7 @@ spec:
         env:
         - name: ADDRESS
           value: /var/lib/csi/sockets/pluginproxy/csi.sock
-        image: {{ keights_system.csi_driver.csi_attacher_image | default('k8s.gcr.io/sig-storage/csi-attacher:v3.1.0') }}
+        image: {{ keights_system.csi_driver.csi_attacher_image | default('registry.k8s.io/sig-storage/csi-attacher:v3.1.0') }}
         imagePullPolicy: IfNotPresent
         name: csi-attacher
         volumeMounts:
@@ -484,7 +484,7 @@ spec:
         env:
         - name: ADDRESS
           value: /var/lib/csi/sockets/pluginproxy/csi.sock
-        image: {{ keights_system.csi_driver.csi_snapshotter_image | default('k8s.gcr.io/sig-storage/csi-snapshotter:v3.0.3') }}
+        image: {{ keights_system.csi_driver.csi_snapshotter_image | default('registry.k8s.io/sig-storage/csi-snapshotter:v3.0.3') }}
         imagePullPolicy: IfNotPresent
         name: csi-snapshotter
         volumeMounts:
@@ -496,7 +496,7 @@ spec:
         env:
         - name: ADDRESS
           value: /var/lib/csi/sockets/pluginproxy/csi.sock
-        image: {{ keights_system.csi_driver.csi_resizer | default('k8s.gcr.io/sig-storage/csi-resizer:v1.1.0') }}
+        image: {{ keights_system.csi_driver.csi_resizer | default('registry.k8s.io/sig-storage/csi-resizer:v1.1.0') }}
         imagePullPolicy: IfNotPresent
         name: csi-resizer
         volumeMounts:
@@ -504,7 +504,7 @@ spec:
           name: socket-dir
       - args:
         - --csi-address=/csi/csi.sock
-        image: {{ keights_system.csi_driver.livenessprobe_image | default('k8s.gcr.io/sig-storage/livenessprobe:v2.2.0') }}
+        image: {{ keights_system.csi_driver.livenessprobe_image | default('registry.k8s.io/sig-storage/livenessprobe:v2.2.0') }}
         imagePullPolicy: IfNotPresent
         name: liveness-probe
         volumeMounts:
@@ -572,7 +572,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        image: {{ keights_system.csi_driver.aws_ebs_csi_driver_image | default('k8s.gcr.io/provider-aws/aws-ebs-csi-driver:v1.4.0') }}
+        image: {{ keights_system.csi_driver.aws_ebs_csi_driver_image | default('registry.k8s.io/provider-aws/aws-ebs-csi-driver:v1.4.0') }}
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 5
@@ -606,7 +606,7 @@ spec:
           value: /csi/csi.sock
         - name: DRIVER_REG_SOCK_PATH
           value: /var/lib/kubelet/plugins/ebs.csi.aws.com/csi.sock
-        image: {{ keights_system.csi_driver.csi_node_driver_registrar_image | default('k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.1.0') }}
+        image: {{ keights_system.csi_driver.csi_node_driver_registrar_image | default('registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.1.0') }}
         imagePullPolicy: IfNotPresent
         name: node-driver-registrar
         volumeMounts:
@@ -616,7 +616,7 @@ spec:
           name: registration-dir
       - args:
         - --csi-address=/csi/csi.sock
-        image: {{ keights_system.csi_driver.livenessprobe_image | default('k8s.gcr.io/sig-storage/livenessprobe:v2.2.0') }}
+        image: {{ keights_system.csi_driver.livenessprobe_image | default('registry.k8s.io/sig-storage/livenessprobe:v2.2.0') }}
         imagePullPolicy: IfNotPresent
         name: liveness-probe
         volumeMounts:
