--- a/stack/ansible/keights-system/templates/manifests/calico.yml.j2
+++ b/stack/ansible/keights-system/templates/manifests/calico.yml.j2
@@ -1021,7 +1021,7 @@ spec:
       nodeSelector:
         beta.kubernetes.io/os: linux
       containers:
-        - image: {{ keights_system.network.typha_autoscaler_image | default('k8s.gcr.io/cpa/cluster-proportional-autoscaler:1.8.6') }}
+        - image: {{ keights_system.network.typha_autoscaler_image | default('registry.k8s.io/cpa/cluster-proportional-autoscaler:1.8.6') }}
           name: autoscaler
           command:
             - /cluster-proportional-autoscaler
